# etlegacy-tools

./: README.md  etl-installer.nsi  etl.nsis
coverity/: coverity.sh
etlist/: CMakeLists.txt  connection.cpp  connection.h  etparser.cpp  etparser.h  main.cpp
inno_installer/: etl_innoinstaller.iss  intro.rtf  it_download.iss
linux/: etl-installer  etl-launcher  etlegacy-data.html  etlegacy-linux-assets-extractor.sh  etlegacy-linux-assets-installer.sh  etlegacy-linux-full-installer.sh
nsis/: etlegacy.nsi
update/: update-geoip.sh  update-omnibot.sh  update-wolfadmin.sh
vs2010/: ETLegacy_windows_dependancies.7z  etlegacy-dedicated.vcxproj  etlegacy-dedicated.vcxproj.filters  etlegacy.sln  etlegacy.vcxproj  etlegacy.vcxproj.filters  etmain_cgame.vcxproj  etmain_cgame.vcxproj.filters  etmain_game.vcxproj  etmain_game.vcxproj.filters  etmain_ui.vcxproj  etmain_ui.vcxproj.filters
